--- a/style.css
+++ b/style.css
@@ -110,25 +110,24 @@ nav a:hover{
     background: rgb(2,0,36);
 background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
     padding: 10px 50px;
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .skillGrid{
     display: grid;
     grid-template-columns: auto auto auto;
-    
+    gap: 20px;
 }
 
 .skillGrid div{
-    background-color: #f1f1f1;
-    border: 1px solid black;
-    padding: 10px;
-}
-
-
-.second div{
-    width: 20px;
-    background-color: red;
+    padding: 50px;
+    background-color: aliceblue;
+    border: 2px red solid;
 }
 
 
@@ -145,7 +144,7 @@ background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
 /* third */
 .third{
     background: rgb(2,0,36);
-background: linear-gradient(165deg, rgba(2,0,36,1) 0%, rgba(124,0,121,1) 100%);
+    background: linear-gradient(165deg, rgba(2,0,36,1) 0%, rgba(124,0,121,1) 100%);
     padding: 10px 50px;
     flex-grow: 1;
 }
