--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     /* border: 1px solid red; */
 }
 
@@ -62,11 +63,15 @@ nav a:hover{
 /* first */
 .profileDiv{
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
+    justify-content: space-around;
     margin-top: 50px;
 }
 
 .first{
+    /* background: rgb(115,1,111);
+    background: linear-gradient(0deg, rgba(115,1,111,1) 0%, rgba(2,0,42,1) 100%); */
+
     background-image: url('images/background1.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -74,6 +79,7 @@ nav a:hover{
     padding: 10px 50px;
     flex-grow: 2;
 }
+
 
 .name{
     font-size: 2.4rem;
@@ -107,8 +113,8 @@ nav a:hover{
 /* second */
 
 .second{
-    background: rgb(2,0,36);
-background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
+    background: #111111;
+    background: linear-gradient(0deg, rgba(115,1,111,1) 0%, #111111 50%);
     padding: 10px 50px;
     /* flex-grow: 1; */
     display: flex;
@@ -116,18 +122,32 @@ background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
     justify-content: center;
     align-items: center;
 
+
 }
 
 .skillGrid{
     display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 30px;
+    /* width: 300px;
+    height: 300px; */
+    margin-block: 30px;
 }
 
-.skillGrid div{
-    padding: 50px;
+
+.gridItems{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family:monospace;
+    font-size: 1.5em;
+    font-weight: 700;
     background-color: aliceblue;
-    border: 2px red solid;
+    border-radius: 8px;
+    width: 200px;
+    height: 200px;
+    
 }
 
 
@@ -143,8 +163,8 @@ background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
 
 /* third */
 .third{
-    background: rgb(2,0,36);
-    background: linear-gradient(165deg, rgba(2,0,36,1) 0%, rgba(124,0,121,1) 100%);
+    background: rgb(28,1,115);
+    background: linear-gradient(0deg, rgba(28,1,115,1) 0%, rgba(2,0,42,1) 100%);
     padding: 10px 50px;
     flex-grow: 1;
 }
@@ -161,7 +181,7 @@ background: linear-gradient(16deg, rgba(2,0,36,1) 0%, rgba(0,0,154,1) 100%);
 /* fourth */
 
 .fourth{
-    background-color: rgb(255, 0, 149);
+    background-color: #1c0173;
     padding: 10px 50px;
     flex-grow: 1;
 }
